--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>AzureReadiness: WebCamp</title>
+      <title>Build 2016 | Code Labs | Web Dev</title>
 	  <link rel="stylesheet" href="{{ relative }}style.css">
    </head>
    <body>
